Update Chrome extension styling and detection
- Add red gradient theme matching dashboard
- Add BoosterPro logo to header
- Improve set code detection (add set name mapping)
- Now detects 'Carrying On His Will' as OP-13
- Update all buttons to red gradient style
- Add glow effects on hover

--- a/chrome-extension/popup/popup.html
+++ b/chrome-extension/popup/popup.html
@@ -10,8 +10,8 @@
   <div class="popup">
     <div class="header">
       <div class="logo">
-        <span class="icon">🎯</span>
-        <span class="title">BoosterBoxPro</span>
+        <img src="icons/logo.png" alt="BoosterPro" class="logo-img" onerror="this.style.display='none'">
+        <span class="title">BoosterPro</span>
       </div>
     </div>
     
